objects/Artera_Resource__c.object
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workerID__c</fullName>
        <label>Worker ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupCode__c</fullName>
        <label>Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositionId__c</fullName>
        <externalId>true</externalId>
        <label>PositionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hydro_X_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Weekly_Hours__c</fullName>
        <label>Weekly Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Artera_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artera Region</label>
        <referenceTo>Artera_Region__c</referenceTo>
        <relationshipName>Artera_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Worker_Status__c</fullName>
        <label>Worker Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorName__c</fullName>
        <formula>Supervisor__r.FirstName  &amp; &apos; &apos;&amp; Supervisor__r.LastName</formula>
        <label>SupervisorName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Unit__c</fullName>
        <label>Bargaining Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hydro_X_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <label>Supervisor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator_Fields__c</fullName>
        <label>Indicator Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worker_Type_Code__c</fullName>
        <label>Worker Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_WorkLocation__c</fullName>
        <label>Home WorkLocation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Working_Hour_Type__c</fullName>
        <label>Working Hours Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Shift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Hire_Date__c</fullName>
        <label>Original Hire Date</label>
        <type>Date</type>
    </fields>
    <sharingReasons>
        <fullName>AssignedUser__c</fullName>
        <label>AssignedUser</label>
    </sharingReasons>
</CustomObject>